# Digital-Twin-Simulation

./: .gitignore  .readthedocs.yaml  README.md  download_dataset.py  pyproject.toml
docs/: conf.py  index.md  index.rst  intro.md
docs/blocks/wave_1/: Demographics_wave_1.md  Economic_preferences___intro_wave_1.md
docs/blocks/wave_2/: Economic_preferences___intro_wave_2.md  Economic_preferences_wave_2.md  Forward_Flow_wave_2.md  Personality_wave_2.md
docs/blocks/wave_3/: Cognitive_tests_wave_3.md  Economic_preferences_wave_3.md  Personality_wave_3.md
docs/blocks/wave_4/: Allais_Form_1_wave_4.md  Anchoring___African_countries_high_wave_4.md  Anchoring___African_countries_low_wave_4.md  Anchoring___redwood_high_wave_4.md  Anchoring___redwood_low_wave_4.md  Base_rate_30_engineers_wave_4.md  Base_rate_70_engineers_wave_4.md  Disease_loss_wave_4.md  False_consensus_wave_4.md  Less_is_More_Gamble_B_wave_4.md  Myside_German_wave_4.md  Non_experimental_heuristics_and_biases_wave_4.md  Outcome_bias___success_wave_4.md  Probability_matching_vs__maximizing___Problem_1_wave_4.md  Probability_matching_vs__maximizing___Problem_2_wave_4.md  Product_Preferences___Pricing_wave_4.md  Proportion_dominance_1A_wave_4.md  Proportion_dominance_1C_wave_4.md  Proportion_dominance_2A_wave_4.md  WTA_WTP_Thaler___WTP_noncertainty_wave_4.md  WTA_WTP_Thaler_problem___WTA_certainty_wave_4.md
docs/intro/: index.md
docs/notebooks/: index.md
docs/waves/: wave_1.md  wave_2.md  wave_3.md  wave_4.md
eval_configs/: text_base_gpt41_mini_eval.yaml
evaluation/: column_mapping.csv  convert_and_compare_responses.py  convert_csv_format.py  evaluate_responses.py  evaluation_basic.yaml  extract_csv_from_json.py  extract_mega_persona_csv.py  generate_question_mapping.py  json2csv.py  mad_accuracy_evaluation.py  predict_answers_ml.py  pricing_analysis.py  within_between_subjects.py  within_between_subjects_5.13clean.py
ml_prediction/: .gitignore  README.md  ml_prediction_config.yaml  predict_answer_xgboost.py  prepare_xgboost_for_mad.py
notebooks/: demo_full_pipeline.ipynb  demo_simple_new_question.ipynb  demo_simple_simulation.ipynb
scripts/: run_evaluation_pipeline.sh  run_pipeline.sh
text_simulation/: batch_convert_personas.py  convert_persona_to_text.py  convert_question_json_to_text.py  create_text_simulation_input.py  llm_helper.py  postprocess_responses.py  run_LLM_simulations.py
text_simulation/configs/: openai_config.yaml
(+70 files in other folders)
