[tool.poetry]
name = "digital-twin-simulation"
version = "0.2.0"
description = "Digital Twin Simulation for NeurIPS Submission"
authors = ["Tianyi Peng <tianyipeng95@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.7"
datasets = "^2.18.0"
tqdm = "^4.66.0"
huggingface-hub = "^0.21.0"
python-dotenv = "^1.1.0"
google = "^3.0.0"
google-generativeai = "^0.8.5"
openai = "^1.78.1"
tenacity = "^9.1.2"
pandas = ">=2.2.3,<3.0.0"
ipython = ">=8.0.0,<9.0.2"
setuptools = ">=78.1.0,<79.0.0"
ipykernel = ">=6.29.5,<7.0.0"
openpyxl = "^3.1.5"
numpy = ">=1.21.0"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
pyyaml = ">=6.0.0"
urllib3 = "<2.0"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
google-genai = "^1.14.0"
statsmodels = "^0.14.4"
gensim = "^4.3.3"
linearmodels = "^6.1"

[tool.poetry.group.dev.dependencies]
nbconvert = "^7.16.6"
papermill = "^2.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
