[tool.poetry]
name = "digital-twin-simulation"
version = "0.3.0"
description = "Digital Twin Simulation"
authors = ["Tianyi Peng <tianyipeng95@gmail.com>", "George (Zhida) Gui <zg2467@gsb.columbia.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.7"
datasets = "^2.18.0"
tqdm = "^4.66.0"
huggingface-hub = "^0.21.0"
python-dotenv = "^1.1.0"
google = "^3.0.0"
google-generativeai = "^0.8.5"
openai = "^1.78.1"
tenacity = "^9.1.2"
ipython = "^9.2.0"
sacred = "^0.8.7"
setuptools = "^80.9.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
openpyxl = "^3.1.0"
pyyaml = "^6.0"
pandas = "^2.0.0"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
